prost-unwrap-proto-tests/tests/ui/with_struct_no_ident.stderr
error: Parameter must have 2 or 3 arguments
  --> tests/ui/with_struct_no_ident.rs:11:6
   |
11 |     .with_struct());
   |      ^^^^^^^^^^^
